Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,23 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
     }
    ],
    "source": [
     "number\n",
-    "print"
+    "print (number)"
    ]
   },
   {
