Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "def locals_stay_local():\n",
-    "    trapped = 'not escaping'"
+    "    trapped = 'not escapfing'"
    ]
   },
   {
